--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
       <scope>test</scope>
     </dependency>
 	<dependency>
+		<groupId>net.sf.ucanaccess</groupId>
+		<artifactId>ucanaccess</artifactId>
+		<version>5.0.1</version>
+	</dependency>
+	<dependency>
 		<groupId>org.sswr</groupId>
 		<artifactId>util</artifactId>
 		<version>0.1</version>
