--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
   </properties>
 
   <dependencies>
+	<dependency>
+		<groupId>com.drewnoakes</groupId>
+		<artifactId>metadata-extractor</artifactId>
+		<version>2.15.0</version>
+	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -29,6 +34,11 @@
 		<groupId>net.sf.ucanaccess</groupId>
 		<artifactId>ucanaccess</artifactId>
 		<version>5.0.1</version>
+	</dependency>
+	<dependency>
+		<groupId>org.imgscalr</groupId>
+		<artifactId>imgscalr-lib</artifactId>
+		<version>4.2</version>
 	</dependency>
 	<dependency>
 		<groupId>org.sswr</groupId>
