Added Email test

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 	</dependency>
 	<dependency>
 		<groupId>org.sswr</groupId>
-		<artifactId>util</artifactId>
+		<artifactId>util-deps</artifactId>
 		<version>0.1</version>
 	</dependency>
   </dependencies>
