--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 			<version>4.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.4.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.sswr</groupId>
 			<artifactId>util-deps</artifactId>
 			<version>0.1</version>
