--- a/pom.xml
+++ b/pom.xml
@@ -4,19 +4,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.sswr</groupId>
+	<groupId>io.github.sswroom</groupId>
 	<artifactId>test</artifactId>
 	<version>1.0-SNAPSHOT</version>
-
 	<name>test</name>
-	<!-- FIXME change it to the project's website -->
-	<url>http://www.example.com</url>
+	<packaging>jar</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>11</java.version>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -47,6 +45,11 @@
 			<version>7.2.4</version>
 		</dependency>
 		<dependency>
+			<groupId>io.github.sswroom</groupId>
+			<artifactId>util-deps</artifactId>
+			<version>0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>net.sf.ucanaccess</groupId>
 			<artifactId>ucanaccess</artifactId>
 			<version>5.0.1</version>
@@ -60,11 +63,6 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.sswr</groupId>
-			<artifactId>util-deps</artifactId>
-			<version>0.1</version>
 		</dependency>
 	</dependencies>
 
